[metadata]
name = plover-sacha-plugin
keywords = plover

[options]
zip_safe = True
setup_requires =
  setuptools>=30.3.0
install_requires =
  plover>=4.0.0.dev8
  PyQt5>=5.5
packages =
  plover_sacha_plugin

[options.entry_points]
plover.command =
  notify_last_clippy = plover_sacha_plugin.commands:notify_last_clippy_command
  notify = plover_sacha_plugin.commands:notify
  anki_last_clippy = plover_sacha_plugin.commands:anki_last_clippy_command
  emacsclient = plover_sacha_plugin.commands:emacsclient
  