[metadata]
name = plover-sacha-plugin
keywords = plover

[options]
zip_safe = True
setup_requires =
  setuptools>=30.3.0
install_requires =
  plover>=4.0.0.dev8
  PyQt5>=5.5
  
packages =
  plover_sacha_plugin

[options.entry_points]
plover.command =
  notify_last_clippy = plover_sacha_plugin.commands:notify_last_clippy_command
  notify = plover_sacha_plugin.commands:notify
  anki_last_clippy = plover_sacha_plugin.commands:anki_last_clippy_command
  spectra_last_clippy = plover_sacha_plugin.commands:spectra_last_clippy_command
  toggle_window = plover_sacha_plugin.commands:toggle_window_command
  emacsclient = plover_sacha_plugin.commands:emacsclient_command
  emacsclient_current = plover_sacha_plugin.commands:emacsclient_current_command
  emacs_mx = plover_sacha_plugin.commands:emacs_mx_command
  emacs_eval = plover_sacha_plugin.commands:emacs_eval_command
  emacs_key = plover_sacha_plugin.commands:emacs_key_command
  fix_ports = plover_sacha_plugin.commands:fix_ports_command
  toolbar = plover_sacha_plugin.commands:toolbar_command
plover.meta =
  mode_state = plover_sacha_plugin.commands:mode_state_meta
